--- a/src/assets/css/style.scss
+++ b/src/assets/css/style.scss
@@ -54,6 +54,9 @@ li {
         text-align: center;
         margin: 0;
         background-color: rgba(#fff,0.8);
+        thead{
+            background-color: #ffcb08;
+        }
     }
 }
   
